--- a/index.html
+++ b/index.html
@@ -7,3 +7,11 @@
 <div>
 Второе Изменения в ветке разработчика
 </div>
+<div>
+    Изменение из IDEA
+</div>
+<div>
+    <button>
+        Кнопка
+    </button>
+</div>
