Change index.html in IDEA

--- a/index.html
+++ b/index.html
@@ -15,3 +15,9 @@
         Кнопка изменена в блокноте
     </button>
 </div>
+<div>
+    Изменение из блокноте
+</div>
+<div>
+    А теперь в IDEA
+</div>
